# sk

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.h  README.md  Server.cpp  Server.h  config.toml  pom.xml  server.cpp
client/src/main/java/com/company/: Application.java  Connection.java  Welcome.form
server/: .gitignore  CMakeLists.txt  config.toml
server/src/: client.cpp  client.hpp  config.cpp  config.hpp  error.hpp  game.hpp  game_builder.cpp  game_builder.hpp  main.cpp  message.hpp  question.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/: main.cpp  server.cpp  server.hpp
src/main/java/com/company/: Frame.java  Welcome.java
